--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ install:
 - pip install .
 script:
 - election_results_xml_validator list
+- python setup.py test
 deploy:
   provider: pypi
   user: civics-partner-data
