--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,10 @@ deploy:
   on:
     branch: master
   skip_existing: true
+- os: windows
+  language: sh
+  python: "3.7"
+  before_install:
+        - choco install python3
+        - export PATH="/c/Python37:/c/Python37/Scripts:$PATH"
+        - python -m pip install --upgrade pip wheel
