--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,4 +1,4 @@
-name: Build and publish cdf validator
+name: Build and publish CDF validator
 
 on:
   pull_request:
@@ -8,12 +8,12 @@ on:
       - dev
 
 jobs:
-  build-n-publish:
+  build-n-test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
-        python-version: [3.6, 3.7, 3.8]
+        python-version: [3.6, 3.7, 3.8, 3.9]
 
     steps:
     - uses: actions/checkout@v2
@@ -29,9 +29,25 @@ jobs:
       run: |
         civics_cdf_validator list
         python setup.py test
-    - name: Publish package to PyPI
-      if: github.event_name == 'push'
-      uses: pypa/gh-action-pypi-publish@master
+  # Source Github Action template
+  deploy:
+    needs: build-n-test
+    if: github.event_name == 'push'
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
       with:
-        user: civics-partner-data
-        password: ${{ secrets.pypi_password }}
+        python-version: '3.X'
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install setuptools wheel twine
+    - name: Build and publish
+      env:
+        TWINE_USERNAME: civics-partner-data
+        TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
+      run: |
+        python setup.py sdist bdist_wheel
+        twine upload dist/*
