--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -35,6 +35,9 @@ jobs:
     needs: build-n-test
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/civics-cdf-validator
     permissions:
       id-token: write
       contents: read
@@ -48,7 +51,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
-    - name: Build and publish
+    - name: Build a binary wheel
       run: |
         python setup.py sdist bdist_wheel
-        twine upload dist/*
+    - name: Publish dist to PyPi
+      uses: pypa/gh-action-pypi-publish@release/v1
+
